[tool.poetry]
name = "mystique-bdd"
version = "0.1.0"
description = ""
authors = ["Wonung Kim <wukim@casys.kaist.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
toml = "^0.10.2"
pillow = "^10.1.0"
torch = {url = "https://download.pytorch.org/whl/cu121/torch-2.2.0%2Bcu121-cp311-cp311-linux_x86_64.whl"}
numpy = "^1.26.4"
torchvision = "^0.17.0"
tqdm = "^4.66.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
